--- a/src/app/styles/colors.scss
+++ b/src/app/styles/colors.scss
@@ -24,7 +24,4 @@
   --accent-color: #00d1d2;
   --opacity-white-60: rgba(255, 255, 255, 0.6);
   --opacity-colors-black-40: rgba(0, 0, 0, 0.4);
-
-  /* vars */
-  --scrollbar-width: 8px;
 }
