--- a/src/modules/catalog/features/ui/FiltersMobile/FiltersMobile.module.scss
+++ b/src/modules/catalog/features/ui/FiltersMobile/FiltersMobile.module.scss
@@ -78,6 +78,8 @@
   gap: 15px;
   overflow-y: auto;
   padding: 24px;
+
+  @include scrollbar(3px, 3px);
 }
 
 .footer {
